# pale-ale

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.phase4.gate2.md  IMPLEMENTATION_CHECKLIST.phase4.gate3.md  IMPLEMENTATION_CHECKLIST.phase4.md  LICENSE  README.md  SPEC.internal.draft.md  SPEC.md  SPEC.phase4.gate2.md  SPEC.phase4.gate3.md  SPEC.phase4.md  SPEC.public.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
attestations/: README.md
attestations/realdata_ab/: 2026-03-02_realdata_ab_report.txt  2026-03-03_e8_roots_verify.txt  2026-03-03_gate3_E0_balanced_label_effects.txt  2026-03-03_halueval_balanced_n0100_n1100_E1_report.txt  2026-03-03_halueval_balanced_n0100_n1100_E2_report.txt  2026-03-03_halueval_label_counts.txt  2026-03-03_halueval_spans_n50_ab_report.txt  2026-03-03_permutation_E2_kappa_mean.txt  2026-03-04_e8_roots_verify.txt  2026-03-04_halueval_balanced_n0200_n1200_E2_report.txt  2026-03-04_halueval_label_counts.txt  2026-03-04_permutation_E2_kappa_mean_n0200_n1200.txt
attestations/smoke/gate2/: 2026-03-02_p0_report.txt
attestations/smoke/gate3/: 2026-03-02_smoke_report.txt
attestations/triality/: 2026-03-04_eval_hf0_teacher_forcing.txt  2026-03-04_hf_sample0_raw.json  2026-03-05_cfa_batch_primaryE_report.txt  2026-03-05_eval_hf0_teacher_forcing_primaryE.txt  2026-03-05_holdout_primaryE_results.jsonl  2026-03-05_holdout_primaryE_summary.txt  2026-03-05_manifest_index.md  README.md
attestations/triality/batch/: 2026-03-05_eval_hf11_primaryE.txt  2026-03-05_eval_hf12_primaryE.txt  2026-03-05_eval_hf13_primaryE.txt  2026-03-05_eval_hf14_primaryE.txt  2026-03-05_eval_hf15_primaryE.txt  2026-03-05_eval_hf16_primaryE.txt  2026-03-05_eval_hf17_primaryE.txt  2026-03-05_eval_hf18_primaryE.txt  2026-03-05_eval_hf19_primaryE.txt  2026-03-05_eval_hf1_primaryE.txt  2026-03-05_eval_hf20_primaryE.txt  2026-03-05_eval_hf21_primaryE.txt  2026-03-05_eval_hf22_primaryE.txt  2026-03-05_eval_hf24_primaryE.txt  2026-03-05_eval_hf25_primaryE.txt  2026-03-05_eval_hf26_primaryE.txt  2026-03-05_eval_hf28_primaryE.txt  2026-03-05_eval_hf29_primaryE.txt  2026-03-05_eval_hf2_primaryE.txt  2026-03-05_eval_hf30_primaryE.txt  2026-03-05_eval_hf31_primaryE.txt  2026-03-05_eval_hf32_primaryE.txt  2026-03-05_eval_hf33_primaryE.txt  2026-03-05_eval_hf35_primaryE.txt  2026-03-05_eval_hf36_primaryE.txt  2026-03-05_eval_hf37_primaryE.txt  2026-03-05_eval_hf38_primaryE.txt  2026-03-05_eval_hf39_primaryE.txt  2026-03-05_eval_hf3_primaryE.txt  2026-03-05_eval_hf40_primaryE.txt  2026-03-05_eval_hf41_primaryE.txt  2026-03-05_eval_hf42_primaryE.txt  2026-03-05_eval_hf43_primaryE.txt  2026-03-05_eval_hf44_primaryE.txt  2026-03-05_eval_hf48_primaryE.txt  2026-03-05_eval_hf49_primaryE.txt  2026-03-05_eval_hf4_primaryE.txt  2026-03-05_eval_hf5_primaryE.txt  2026-03-05_eval_hf6_primaryE.txt  2026-03-05_eval_hf7_primaryE.txt  (+2 more)
attestations/triality/case_study/: case_summary_109_108.md  case_summary_117_116.md  case_summary_127_126.md  case_summary_135_134.md  case_summary_139_138.md  case_summary_141_140.md  case_summary_153_152.md  case_summary_155_154.md  case_summary_173_172.md  case_summary_17_16.md  case_summary_187_186.md  case_summary_199_198.md  case_summary_31_30.md  case_summary_75_74.md  case_summary_79_78.md  index.md  representative_set_summary.md
attestations/triality/negative_stability/: consistent100_scoreE_report.txt
crates/cli/: Cargo.toml
crates/cli/src/: batch.rs  calibrate.rs  launcher.rs  main.rs  report.rs  target_resolver.rs  tui.rs  tui_theme.rs
crates/cli/tests/: cli.rs
crates/diagnose/: Cargo.toml
crates/diagnose/src/: binding.rs  confounds.rs  diagnose.rs  gate1.rs  gate2.rs  gate2_telemetry.rs  gate3.rs  gate3_telemetry.rs  gate4.rs  lib.rs  linking.rs  manifest_validator.rs  measure.rs  metrics_common.rs  rotor_diagnostics.rs  run_eval.rs  writer.rs
crates/embed/: Cargo.toml
crates/embed/src/: embedder.rs  lib.rs  model.rs
crates/modelspec/: Cargo.toml
crates/modelspec/src/: lib.rs
crates/rotor/: Cargo.toml
crates/rotor/src/: even128.rs  lib.rs
crates/rotor/tests/: even128_algebra.rs  golden.rs
docs/: cfa_case_study_template.md  cfa_prereg_template.md  gate1_smoke.md  gate4_feature_contract_draft.md  rename_runbook.md
docs/examples/: gate1_smoke_sanity16.json  gate1_smoke_tiny.json
scripts/: build_wheel.ps1
src/: lib.rs  python.rs
tools/: README_cfa.md  README_realdata_ab.md  README_smoke.md  README_smoke_gate3.md  aggregate_cfa_batch.py  check_cfa_negative_stability.py  e8_roots.py  eval_local_span.py  eval_triality_token.py  extract_triality_triplets.py  fetch_hf_halueval_spans.py  gate2_label_effects.py  gen_gate2_input.py  gen_gate2_realdata_ab.py  generate_cfa_dataset.py  labels_from_cfa_spans.py  labels_from_halueval_spans.py  plot_cfa_case_pair.py  realdata_label_utils.py  run_cfa_batch_primaryE.py  run_cfa_case_representative.py  run_cfa_smoke.ps1  run_gate2_smoke.ps1  run_gate3_smoke.ps1  run_realdata_ab.ps1  run_triality_batch_holdout.ps1
