[package]
name = "pale-ale-core"
version = "0.3.0"
edition = "2021"
publish = false

[lib]
name = "pale_ale_core"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19"
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py310"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
