[package]
name = "pale-ale-core"
version = "0.3.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
name = "pale_ale_core"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19"
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }

[features]
default = []
inspect = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
