[package]
name = "pale-ale-core"
version = "1.0.0"
edition = "2021"
rust-version = "1.65"
license = "MPL-2.0"
description = "Geometric auditing engine for LLMs using E8 lattices and Geometric Algebra."
homepage = "https://github.com/Udonburo/pale-ale-core"
repository = "https://github.com/Udonburo/pale-ale-core"
readme = "README.md"
keywords = ["ai", "audit", "e8", "geometric-algebra"]
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
]

[lib]
name = "pale_ale_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.19"
pyo3 = { version = "0.21", optional = true, features = ["extension-module", "abi3-py310"] }
numpy = { version = "0.21", optional = true }

[features]
default = []
python = ["dep:pyo3"]
python-inspect = ["python"]
# Deprecated alias for backward compatibility.
inspect = ["python-inspect"]
numpy-support = ["python", "dep:numpy"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = [
  "crates/modelspec",
  "crates/diagnose",
  "crates/cli",
  "crates/embed",
]
