[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "pale-ale"
version = "1.0.0"
description = "Pale Ale (Rust core): deterministic Spin(3) rotor distance kernels"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Udonburo" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]

[project.urls]
Homepage = "https://github.com/Udonburo/pale-ale"
Repository = "https://github.com/Udonburo/pale-ale"
Issues = "https://github.com/Udonburo/pale-ale/issues"
Wrapper-CLI = "https://pypi.org/project/pale-ale/"

[tool.maturin]
module-name = "pale_ale_core"
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
