[package]
name = "pale-ale-cli"
version = "1.0.1"
edition = "2021"
rust-version = "1.65"
license = "MPL-2.0"
description = "Pale-Ale Classic CLI."

[[bin]]
name = "pale-ale"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pale-ale-diagnose = { path = "../diagnose" }
pale-ale-embed = { path = "../embed" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"
tempfile = "3.8"
