[package]
name = "pale-ale-embed"
version = "1.0.1"
edition = "2021"
rust-version = "1.65"
license = "MPL-2.0"
description = "Pale-Ale model management and verification."

[dependencies]
blake3 = "1.5"
directories = "5.0"
pale-ale-modelspec = { path = "../modelspec" }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
once_cell = "1.19"
tempfile = "3.8"
